Update package dependencies, enhance login rate limiting, and improve error handling in pricing page creation. Modify data catalog to include constraints and security details for pricing tiers. Add new SQL migration for pricing pages and related tables with Row Level Security.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@supabase/supabase-js": "^2.49.3",
     "next": "^15.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
